# subtitle-this

./: .env.example  CHANGELOG.md  Dockerfile.openvino  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: prune-ghcr.yml  publish.yml
app/: __init__.py  cache.py  cache_explorer.py  config.py  jobs.py  jobs_store.py  main.py  pipeline_metrics.py  processor.py  quality.py  reference.py  reference_store.py  stats.py  transcript_cache.py  util.py
app/api/: manage.py
app/pipeline/: anti_hallucination.py  audio.py  frames.py  lang_detect.py  openvino_introspect.py  polish.py  scene_bible.py  stt.py  stt_faster_whisper.py  stt_openvino.py  stt_refine.py  track_metadata.py  vocal_isolation.py
app/pipeline/llm/: anthropic.py  openai_compat.py
app/pipeline/translate/: __init__.py  base.py  deepl.py  llm.py  nllb.py
app/server/: __init__.py  base.py  emby_jellyfin.py  plex.py
app/templates/: _jobs_table.html  base.html  cache_explorer.html  cache_stats.html  dashboard.html  library.html  settings.html
app/ui/: routes.py
tests/: conftest.py  test_anti_hallucination.py  test_audio_prep.py  test_cache.py  test_emby_jellyfin_client.py  test_jobs.py  test_jobs_persistence.py  test_p2_hardening.py  test_pipeline_metrics.py  test_pipeline_metrics_expansion.py  test_plex_client.py  test_polish.py  test_processor.py  test_quality.py  test_reference.py  test_settings_migration.py  test_smoke_api.py  test_stats.py  test_stt_openvino_parse.py  test_stt_refine.py  test_stt_segment_offset.py  test_track_metadata.py  test_util.py  test_vocal_isolation.py
