[project]
name = "subtitle-this"
version = "0.11.4"
description = "Speech-to-text + LLM translation service for Emby, Jellyfin, and Plex"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "faster-whisper>=1.1",
    "anthropic>=0.69",
    "openai>=1.55",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
# Demucs vocal-isolation phase. Heavy dep (pulls torchaudio, julius,
# diffq) — opt-in so the slim install path stays light. Both shipped
# Docker images include this extra by default.
vocal-isolation = [
    "demucs>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
